--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/react-dom": "^16.9.8",
         "@types/react-redux": "^7.1.9",
         "@types/react-router-dom": "^5.1.5",
+        "@types/react-transition-group": "^4.4.0",
         "@typescript-eslint/eslint-plugin": "^4.1.0",
         "@typescript-eslint/parser": "^4.1.0",
         "autoprefixer": "^9.8.6",
@@ -80,6 +81,8 @@
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.1",
         "react-router-dom": "^5.2.0",
+        "react-transition-group": "^4.4.1",
+        "reactjs-popup": "^2.0.4",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0"
