--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SRC_PATH=src
 DIST_PATH=dist
-PUBLIC_PATH=/
+PUBLIC_PATH=/todo-react/
 
 APIKEY=AIzaSyAtrUI_gZloRGiLyAMHE9l1B_pKhS_KIAQ
 AUTHDOMAIN=todo-react-typescript-b2562.firebaseapp.com
